--- a/main.html
+++ b/main.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Audio Section</title>
 </head>
-
 <body>
-	<nav>
-    <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
 
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#audio">Audio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Audio Section -->
+    <section id="audio">
         <h2>3 random audios</h2>
 
         <audio controls>
@@ -28,11 +30,7 @@
         <audio controls>
             <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
         </audio>
-    
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    </section>
 
 </body>
-
 </html>
